src/objects/Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Persona_Type__c</fullName>
        <description>This field is created for Lynda One Stack project

Case#08688410: Retiring Field as requested.</description>
        <label>zPersona Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planner</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account which relates to account plan for both LMS and CSO.</description>
        <inlineHelpText>What account is this plan associated to? For LMS, only verified Accounts can be selected.</inlineHelpText>
        <label>Plan Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3 OR 4 OR 5</booleanFilter>
            <errorMessage>The Account you have selected is not verified. Please submit an Einstein ticket to Data Quality for the Account you have selected.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Verified</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>LMS Account Plans</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>LTS Customer Collaboration Page</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>LDC Success Plan</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>LSS CS Churn Mitigation</value>
            </filterItems>
            <infoMessage>For LMS, only verified Accounts are listed.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Number__c</fullName>
        <description>Automatic number field to assign plan number to success plans for the customer success organization.</description>
        <displayFormat>SP-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Automatic number field to assign plan number to success plans for the customer success organization.</inlineHelpText>
        <label>Plan Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <description>LMS Account Plan Year</description>
        <inlineHelpText>LMS Account planning year</inlineHelpText>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                    <default>true</default>
                    <label>2016</label>
                </value>
                <value>
                    <fullName>LOB Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_Cycle__c</fullName>
        <inlineHelpText>When do they typically plan?  Describe any idiosyncracies in their process</inlineHelpText>
        <label>Planning Cycle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Positioning__c</fullName>
        <inlineHelpText>Describe how the agency differentiates itself and it&apos;s specific value proposition</inlineHelpText>
        <label>Positioning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_CCP__c</fullName>
        <description>To Determine whether CCP is primary or not per case 11032012</description>
        <inlineHelpText>To Determine whether CCP is primary or not per case 11032012</inlineHelpText>
        <label>Primary CCP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact_Relationship_Strength__c</fullName>
        <description>Picklist field used by the customer success organization to define the relationship of the primary contact is.</description>
        <inlineHelpText>Please select the relationship strength for the primary contact.</inlineHelpText>
        <label>Primary Contact Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field used by the customer success organization to the opportunity of this success plan.</description>
        <inlineHelpText>Enter the renewal or pilot opportunity this plan is focused on.</inlineHelpText>
        <label>Primary Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact to select primary contact for success plan used by customer success organization.</description>
        <inlineHelpText>Please select relevant primary contact for this success plan.</inlineHelpText>
        <label>Primary contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_contact_role__c</fullName>
        <formula>TEXT(Primary_contact__r.Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary contact role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <inlineHelpText>Select the product for which they are currently paying.</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Strategy__c</fullName>
        <description>What will be done next?</description>
        <inlineHelpText>What will be done next?</inlineHelpText>
        <label>Proposed Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Estimate__c</fullName>
        <label>Q1 Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Estimate__c</fullName>
        <label>Q2 Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_Estimate__c</fullName>
        <label>Q3 Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Created as per case : 06842281</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Red_Candidate__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Acquisition/Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Budget/Price Constraint</fullName>
                </value>
                <value>
                    <fullName>Competitive Pressure</fullName>
                </value>
                <value>
                    <fullName>Decision Maker Unengaged</fullName>
                </value>
                <value>
                    <fullName>Users Unsuccessful in product</fullName>
                </value>
                <value>
                    <fullName>Talent Hub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Account_Justification__c</fullName>
        <description>Label changed as per case : 06842281</description>
        <label>Account Flag Justification</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Red_Account_Status__c</fullName>
        <description>Label changed as per case : 06842281</description>
        <label>ZRed Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Nominate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Candidate__c</fullName>
        <description>Label changed as per case : 06842281</description>
        <label>Candidate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <description>Red Flags are Events that occur that could put a Client at Renewal Risk or cause dissatisfaction. 

Examples: 
1. Technical 
2. Service 
3. Contact 
4. Usage 
5. Product 
6. Loss of Sponsor, Admin, Power</description>
        <formula>IF ( Total_Red_Flags__c &gt; 0 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 1 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 2 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 3 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 4 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 5 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 6 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 7 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 8 , IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL) 
+ 
IF ( Total_Red_Flags__c &gt; 9, IMAGE(&quot;servlet/servlet.FileDownload?file=01532000001fZJW&quot;, &quot;*&quot;, 16, 16), NULL)</formula>
        <inlineHelpText>Red Flags are Events that occur that could put a Client at Renewal Risk or cause dissatisfaction. 

Examples: 
1. Technical 
2. Service 
3. Contact 
4. Usage 
5. Product 
6. Loss of Sponsor, Admin, Power</inlineHelpText>
        <label>Red Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Primary_Opportunity__r.RR_GEO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>Primary_Opportunity__r.Renew_Target_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Health_Change_Date__c</fullName>
        <label>Renewal Health Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Health_Notes__c</fullName>
        <label>Renewal Health Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Health__c</fullName>
        <label>Renewal Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green (little to no risk)</fullName>
                </value>
                <value>
                    <fullName>Yellow (some risk)</fullName>
                </value>
                <value>
                    <fullName>Red (at risk)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Target_Amount__c</fullName>
        <formula>Primary_Opportunity__r.Renewal_Target_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Reason__c</fullName>
        <description>What is the main category for the risk?</description>
        <inlineHelpText>What is the main category for the risk?</inlineHelpText>
        <label>Risk Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost &amp; KPIs</fullName>
                </value>
                <value>
                    <fullName>Product Issues</fullName>
                </value>
                <value>
                    <fullName>Product Adoption</fullName>
                </value>
                <value>
                    <fullName>Service Issues</fullName>
                </value>
                <value>
                    <fullName>Company Dynamics</fullName>
                </value>
                <value>
                    <fullName>False Churn</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Sub_Reason__c</fullName>
        <description>What is the sub-category for the risk?</description>
        <inlineHelpText>What is the sub-category for the risk?</inlineHelpText>
        <label>Risk Sub-Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Risk_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value/KPIs not defined</fullName>
                </value>
                <value>
                    <fullName>Value/KPIs not demonstrated</fullName>
                </value>
                <value>
                    <fullName>Decline in budget</fullName>
                </value>
                <value>
                    <fullName>Oversold quantity of seats</fullName>
                </value>
                <value>
                    <fullName>Compliance issues</fullName>
                </value>
                <value>
                    <fullName>Losing to competing product</fullName>
                </value>
                <value>
                    <fullName>Losing to LI.com (Premium)</fullName>
                </value>
                <value>
                    <fullName>Customer unresponsive</fullName>
                </value>
                <value>
                    <fullName>No sponsorship</fullName>
                </value>
                <value>
                    <fullName>Poor customer program management</fullName>
                </value>
                <value>
                    <fullName>Insufficient product adoption</fullName>
                </value>
                <value>
                    <fullName>Poor fit/sold to wrong audience</fullName>
                </value>
                <value>
                    <fullName>Billing issues</fullName>
                </value>
                <value>
                    <fullName>Poor onboarding</fullName>
                </value>
                <value>
                    <fullName>Poor customer experience</fullName>
                </value>
                <value>
                    <fullName>Downsize, restructure, or turnover</fullName>
                </value>
                <value>
                    <fullName>Company out of business</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Competing implementation</fullName>
                </value>
                <value>
                    <fullName>Opp consolidation</fullName>
                </value>
                <value>
                    <fullName>Opp changed regions</fullName>
                </value>
                <value>
                    <fullName>Multi-regional Splits</fullName>
                </value>
                <value>
                    <fullName>Move to MRSS</fullName>
                </value>
                <value>
                    <fullName>Volume discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOP_Gap__c</fullName>
        <description>How much could this account grow (in seats) if there was not a churn risk?</description>
        <inlineHelpText>How much could this account grow (in seats) if there was not a churn risk?</inlineHelpText>
        <label>SOP Gap</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seats_at_Risk__c</fullName>
        <description>Seats at Risk</description>
        <inlineHelpText>How many seats are at risk?</inlineHelpText>
        <label>Seats at Risk</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>Primary_Opportunity__r.RR_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <description>Field used for the customer success organization to define the type of account.</description>
        <inlineHelpText>Please select what type of account this success plan is for.</inlineHelpText>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>Churn Risk</fullName>
                </value>
                <value>
                    <fullName>Growth Account</fullName>
                </value>
                <value>
                    <fullName>Steady-state Account</fullName>
                </value>
                <value>
                    <fullName>Raving Fan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Showcase__c</fullName>
        <inlineHelpText>Describe how our offering and product mix can help this LOB showcase new launches</inlineHelpText>
        <label>Showcase</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Code_Example__c</fullName>
        <label>Source Code Example</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status field for the success plan used by the customer success organization.</description>
        <inlineHelpText>Select the appropriate value to indicate whether you&apos;re creating the plan, if it&apos;s been presented to the customer, or if you&apos;re reviewing it with them.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Kickoff</fullName>
                </value>
                <value>
                    <fullName>Plan Complete</fullName>
                </value>
                <value>
                    <fullName>Success Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Admin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Plan_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans (Sub Admin)</relationshipLabel>
        <relationshipName>Account_Plans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Success_Metrics__c</fullName>
        <description>SFDC Enhancement requested by Mike Gettman. Please refer the Release Component RC-32335 link below. 
https://linkedin.my.salesforce.com/a1W3200000EWJOz</description>
        <inlineHelpText>Determines level of customer agreement for success metrics and a return on investment.</inlineHelpText>
        <label>Success Metrics</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success metrics not defined</fullName>
                </value>
                <value>
                    <fullName>Success metrics are defined and agreed upon</fullName>
                </value>
                <value>
                    <fullName>Success metrics are defined, agreed upcon, and formal ROI analysis completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Swing_Accounts__c</fullName>
        <inlineHelpText>Name advertisers that can make/break this category</inlineHelpText>
        <label>Swing Accounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tactical_Plan__c</fullName>
        <inlineHelpText>How will you activate the plans above?  What is the timeline</inlineHelpText>
        <label>Tactical Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used by customer success organization to define the user who is the technical consultant on the success plan.</description>
        <inlineHelpText>If a technical consultant is working with you on delivering this plan, enter their name here.</inlineHelpText>
        <label>Technical Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Plan_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plans (Technical Contact)</relationshipLabel>
        <relationshipName>Account_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Red_Flags__c</fullName>
        <description>Total number of Red Flags created, including Resolved and In Progress.</description>
        <inlineHelpText>Total number of Red Flags created, including Resolved and In Progress.</inlineHelpText>
        <label>Total Red Flags</label>
        <summaryForeignKey>Red_Flag__c.Success_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <formula>Plan_Account__r.Ultimate_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Account_Plan_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique Identifier for an Account Plan</description>
        <label>Unique Account Plan Name</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unresolved_Red_Flags__c</fullName>
        <description>Calculates the total number of Unresolved Red Flags</description>
        <inlineHelpText>Calculates the total number of Unresolved Red Flags</inlineHelpText>
        <label>Unresolved Red Flags</label>
        <summaryFilterItems>
            <field>Red_Flag__c.Resolved__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Red_Flag__c.Success_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Up_and_Comers__c</fullName>
        <inlineHelpText>List the rising stars who are stealing share</inlineHelpText>
        <label>Up and Comers</label>
        <type>TextArea</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>Account_Plans_2013</fullName>
        <columns>NAME</columns>
        <columns>Plan_Account__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <label>Account Plans 2013</label>
    </listViews>
    <listViews>
        <fullName>Account_Plans_2014</fullName>
        <columns>NAME</columns>
        <columns>Plan_Account__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>Account Plans 2014</label>
    </listViews>
    <listViews>
        <fullName>Account_Plans_2015</fullName>
        <columns>NAME</columns>
        <columns>Plan_Account__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>Account Plans 2015</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_Plans_20161</fullName>
        <columns>NAME</columns>
        <columns>Plan_Account__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>Account Plans 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alexis_King_Account_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Account__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>Success_Metrics__c</columns>
        <columns>Learning_Culture__c</columns>
        <columns>Total_Red_Flags__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Likelihood_of_churn__c</columns>
        <columns>Renewal_Health__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>King</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>Alexis King Account Plans</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Antonia_Bralic_Account_Plan</fullName>
        <columns>NAME</columns>
        <columns>Plan_Account__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>Success_Metrics__c</columns>
        <columns>Total_Red_Flags__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Renewal_Health__c</columns>
        <columns>Learning_Culture__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Bralic</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>Antonia Bralic Account Plan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSO_Success_Plans</fullName>
        <columns>NAME</columns>
        <columns>Lifecycle_Stage__c</columns>
        <columns>Plan_Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account_Plan__c.CSO_Success_Plan</value>
        </filters>
        <label>CSO Success Plans</label>
        <language>en_US</language>
    </listViews>
</CustomObject>